fix: ExercicioViewIntegrationTest, 3 failures restantes